--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -3,27 +3,29 @@ Deploying this Quick Start for a new virtual private cloud (VPC) with
 AWS Cloud.
 
 // Replace this example diagram with your own. Send us your source PowerPoint file. Be sure to follow our guidelines here : http://(we should include these points on our contributors giude)
+:xrefstyle: short
 [#architecture1]
 .Quick Start architecture for _{partner-product-name}_ on AWS
 [link=images/architecture_diagram.png]
 image::../images/architecture_diagram.png[Architecture,width=648,height=439]
 
-As shown in Figure 1, the Quick Start sets up the following:
+As shown in <<architecture1>>, the Quick Start sets up the following:
 
 * A highly available architecture that spans two Availability Zones.*
 * A VPC configured with public and private subnets, according to AWS
 best practices, to provide you with your own virtual network on AWS.*
 
-In the public subnets:
+* In the public subnets:
 
-* Managed network address translation (NAT) gateways to allow outbound
-internet access for resources in the private subnets.*
-* A Linux bastion host in an Auto Scaling group to allow inbound Secure
-Shell (SSH) access to EC2 instances in public and private subnets.*
+**	A FortiGate host in an Auto Scaling group complements AWS security groups to provide intrusion protection, web filtering, and threat detection to help protect your services from cyber-attacks. It also allows VPN access by authorized users.
 
-In the private subnets:
-// Add bullet points for any additional components that are included in the deployment. Make sure that the additional components are also represented in the architecture diagram.
-* <describe any additional components>.
+**	The master FortiGate in the Auto Scaling group(s) acts as a NAT gateway, allowing outbound internet access for resources in the private subnets.*
+
+*	A public-facing Network Load Balancer is created as a part of the deployment process. A private-facing Network Load Balancer is optional.
+
+*	AWS Lambda, which provides the core Auto Scaling functionality between FortiG.
+
+*	An Amazon DynamoDB database that uses Fortinet-provided scripts to store information about Auto Scaling condition states.
 
 *The template that deploys the Quick Start into an existing VPC skips
 the components marked by asterisks and prompts you for your existing VPC
