--- a/docs/partner_editable/overview_target_and_usage.adoc
+++ b/docs/partner_editable/overview_target_and_usage.adoc
@@ -2,6 +2,6 @@
 // Identify your target audience and explain how/why they would use this Quick Start.
 //Avoid borrowing text from third-party websites (copying text from AWS service documentation is fine). Also, avoid marketing-speak, focusing instead on the technical aspect.
 
-This Quick Start reference deployment guide provides step-by-step instructions for deploying {partner-product-name} on the AWS Cloud.
+This Quick Start reference deployment guide provides step-by-step instructions for deploying {partner-product-name} with FortiAnalyzer integration on the AWS Cloud. The integration of FortiAnalyzer provides consolidated logging and reporting for your FortiGate cluster.
 
-This Quick Start is for users who <target audience and usage scenario>
+This Quick Start is for users who are planning to implement or extend Fortinet’s Security Fabric workloads on the AWS Cloud, including IT infrastructure architects, administrators, and DevOps professionals.
