--- a/docs/partner_editable/service_limits.adoc
+++ b/docs/partner_editable/service_limits.adoc
@@ -3,12 +3,13 @@
 |Resource |This deployment uses
 
 // Space needed to maintain table headers
-|VPCs |<n>
-|Elastic IP addresses |<n>
-|AWS Identity and Access Management (IAM) security groups |<n>
-|IAM roles |<n>
-|Auto Scaling groups |<n>
-|Application Load Balancers |<n>
-|Network Load Balancers |<n>
-|<type> instances |<n>
+|VPCs |1
+|Elastic IP addresses | 0 or 1
+|IAM security groups | 3
+|IAM roles |7
+|Auto Scaling groups | 1 or 2
+|Application Load Balancers | 0
+|Network Load Balancers | 1 or 2
+|c5.large instances (FortiGate) | 0 or More
+|m4.large instances (FortiAnalyzer) | 0 or More
 |===
