--- a/docs/partner_editable/specialized_knowledge.adoc
+++ b/docs/partner_editable/specialized_knowledge.adoc
@@ -1,6 +1,18 @@
 // Replace the content in <>
 // Describe or link to specific knowledge requirements; for example: “familiarity with basic concepts in the areas of networking, database operations, and data encryption” or “familiarity with <software>.”
 
-This Quick Start assumes familiarity with <knowledge expectations>.
+This Quick Start assumes familiarity with Fortinet FortiGate Next-Generation Firewall technology, including configuration of a FortiGate using the CLI.
+
+This deployment also requires a moderate level of familiarity with the following AWS services:
+
+*	https://aws.amazon.com/documentation/ec2/[Amazon Elastic Cloud Compute (Amazon EC2)]
+*	https://aws.amazon.com/documentation/autoscaling/[Amazon EC2 Auto Scaling] 
+*	https://aws.amazon.com/documentation/vpc/[Amazon VPC]
+*	https://aws.amazon.com/documentation/cloudformation/[AWS CloudFormation]
+*	https://aws.amazon.com/documentation/lambda/[AWS Lambda]
+*	https://aws.amazon.com/documentation/dynamodb/[Amazon DynamoDB]
+
+If you’re new to AWS, visit the https://aws.amazon.com/getting-started/[Getting Started Resource Center] and the https://aws.amazon.com/training/[AWS Training and Certification website]. These sites provide materials for learning how to design, deploy, and operate your infrastructure and applications on the AWS Cloud.
+
 
 
