--- a/docs/partner_editable/service_limits.adoc
+++ b/docs/partner_editable/service_limits.adoc
@@ -4,12 +4,11 @@
 
 // Space needed to maintain table headers
 |VPCs |1
-|Elastic IP addresses | 0 or 1
-|IAM security groups | 3
+|Elastic IP addresses | 1
+|AWS security groups | 3
 |IAM roles |7
-|Auto Scaling groups | 1 or 2
-|Application Load Balancers | 0
-|Network Load Balancers | 1 or 2
-|c5.large instances (FortiGate) | 0 or More
-|m4.large instances (FortiAnalyzer) | 0 or More
+|Auto Scaling groups | 2
+|Network Load Balancers | 2
+|c5.large instances (FortiGate) | 4
+|m4.large instances (FortiAnalyzer) | 1
 |===
