--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -1,12 +1,14 @@
 :quickstart-project-name: quickstart-fortinet-fortigate
 :partner-product-name: FortiGate Auto Scaling
 :partner-company-name: Fortinet, Inc.
-:doc-month: May
+:doc-month: November
 :doc-year: 2020
-:partner-contributors: Kimberly Lee, Jayden Liang, Daniel Chao, and Jamie Pate - {partner-company-name}
-:quickstart-contributors: Shivansh Singh - Tony Bulding, AWS
+:partner-contributors: Kimberly Lee, Jayden Liang, Daniel Chao, and Jamie Pate, {partner-company-name}
+:quickstart-contributors: Shivansh Singh and Tony Bulding, AWS Quick Start team
 :deployment_time: 10 minutes
+//TODO Shivansh, The landing page says 15 minutes. Which number should we use?
 :default_deployment_region: us-east-2
+:parameters_as_appendix:
 // Uncomment these two attributes if you are leveraging
 // - an AWS Marketplace listing.
 // Additional content will be auto-generated based on these attributes.
