--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -1,31 +1,41 @@
 Deploying this Quick Start for a new virtual private cloud (VPC) with
-*default parameters* builds the following _{partner-product-name}_ environment in the
+default parameters builds the following {partner-product-name} environment in the
 AWS Cloud.
 
-// Replace this example diagram with your own. Send us your source PowerPoint file. Be sure to follow our guidelines here : http://(we should include these points on our contributors giude)
 :xrefstyle: short
 [#architecture1]
 .Quick Start architecture for _{partner-product-name}_ on AWS
-[link=images/architecture_diagram.png]
-image::../images/architecture_diagram.png[Architecture,width=648,height=439]
+image::../images/architecture_diagram.png[Architecture,width=100%,height=100%]
 
 As shown in <<architecture1>>, the Quick Start sets up the following:
 
 * A highly available architecture that spans two Availability Zones.*
+
 * A VPC configured with public and private subnets, according to AWS
 best practices, to provide you with your own virtual network on AWS.*
 
 * In the public subnets:
 
-**	A FortiGate host in an Auto Scaling group complements AWS security groups to provide intrusion protection, web filtering, and threat detection to help protect your services from cyber-attacks. It also allows VPN access by authorized users.
+** A FortiGate host in an Auto Scaling group to complement AWS security groups (not shown) to provide intrusion protection, web filtering, and threat detection to help protect your services from cyberattacks. It also allows VPN access by authorized users.
+//TODO Shivansh, If the AWS security groups are important to mention, might we add them to the diagram? Or say "(not shown)"? Call them IAM security groups (no; change the resource item to AWS security groups)? 
+//TODO Marcia's note to self: Spell out IAM on first occurrence.
 
-**	The master FortiGate in the Auto Scaling group(s) acts as a NAT gateway, allowing outbound internet access for resources in the private subnets.*
+** A FortiGate master instance in an Auto Scaling group to act as a NAT gateway, allowing outbound internet access for resources in the private subnets.*
 
-*	A public-facing Network Load Balancer is created as a part of the deployment process. A private-facing Network Load Balancer is optional.
+** A Network Load Balancer that distributes inbound traffic across FortiGate instances.
 
-*	AWS Lambda, which provides the core Auto Scaling functionality between FortiG.
+** A FortiAnalyzer instance, which consolidates logging and reporting for your FortiGate cluster.
+//TODO Move this up in the list.
 
-*	An Amazon DynamoDB database that uses Fortinet-provided scripts to store information about Auto Scaling condition states.
+* In the private subnets:
+
+** (Optional) A Network Load Balancer that distributes inbound traffic across your protected instances.
+
+* AWS Lambda, which provides the core Auto Scaling functionality between FortiGate instances.
+
+* Amazon S3 to host artifacts for Lambda functions and logs.
+
+* Amazon DynamoDB to store information about Auto Scaling condition states.
 
 *The template that deploys the Quick Start into an existing VPC skips
 the components marked by asterisks and prompts you for your existing VPC
