--- a/docs/partner_editable/specialized_knowledge.adoc
+++ b/docs/partner_editable/specialized_knowledge.adoc
@@ -1,7 +1,7 @@
 // Replace the content in <>
 // Describe or link to specific knowledge requirements; for example: “familiarity with basic concepts in the areas of networking, database operations, and data encryption” or “familiarity with <software>.”
 
-This Quick Start assumes familiarity with Fortinet FortiGate Next-Generation Firewall technology, including configuration of a FortiGate using the CLI.
+This Quick Start assumes familiarity with Fortinet FortiGate next-generation firewall technology, including configuration of a FortiGate using the CLI.
 
 This deployment also requires a moderate level of familiarity with the following AWS services:
 
